examples/compiler_errors/adversarial/common_dev_mistakes/PrivateMemberAccess.flx
import HiddenApi

module PrivateMemberAccess {
    fn leak() -> Int {
        HiddenApi._private_secret()
    }
}
